estudianteschart/templates/overlays/develop/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estudiantestrabajo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estudiantestrabajo-mysql
  template:
    spec:
      containers:
        - name: estudiantestrabajo
          resources:
            requests:
              cpu: "200m"
              memory: "400Mi"
            limits:
              cpu: "250m"
              memory: "500Mi"
