estudianteschart/templates/overlays/develop/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estudiantestrabajo-svc
spec:
  type: LoadBalancer
