estudianteschart/templates/overlays/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: estudiantesdeploy-ingress
